fix(publish): update package config for publishing (#1446)
* Update package config for publishing as public packages

* Update package config for publishing as public packages (remove private for starter)

* Update package config for publishing as public packages

* restore lerna bootstrap

* fixing build related issues after restoring lerna bootstrap

* fixing github workflow build related issue after restoring lerna bootstrap

* lint import ignore

* fix missing __cxstarter__ build issue

* build:packages update; remove comments

* bodiless/test-site rename to sites/test-site

* remove github action build flow ci install

Co-authored-by: Dewen Li <dli94@its.jnj.com>

--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -42,14 +42,18 @@ jobs:
           git config --get user.name
           git config --get user.email
 
-      - name: Install dependencies
-        run: npm ci
+        #- name: Install dependencies
+        #  run: npm ci
 
-      - name: Check dependency sync
-        run: npm run sync:check
-      
-      - name: Build packages
-        run: npm run build:packages
+        # npm workspace approach
+        #- name: Check dependency sync
+        #  run: npm run sync:check
+        #
+        #- name: Build packages
+        #  run: npm run build:packages
+
+      - name: Build
+        run: npm run setup
 
       - name: Lint
         run: npm run lint
