--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
     "gatsby"
   ],
   "license": "Apache-2.0",
-  "workspaces": [
-    "sites/*",
-    "packages/*"
-  ],
   "scripts": {
-    "bootstrap": "npm install",
+    "bootstrap": "npm run clean:symlinks && npx lerna bootstrap --hoist --strict",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
-    "build:packages": "cross-env NODE_ENV=production lerna run build --stream --no-private",
+    "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
@@ -42,15 +38,15 @@
     "publish:major": "lerna version major --conventional-commits",
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
-    "serve": "lerna run serve --scope @bodiless/test-site --stream",
-    "setup": "npm run clean:symlinks && npm i && npm run build:packages",
+    "serve": "lerna run serve --scope @sites/test-site --stream",
+    "setup": "npm run bootstrap && npm run build:packages",
     "sites:pack": "lerna exec --no-private --stream -- npm pack",
     "sites:clone-local": "node ./scripts/sites-clone",
     "sites:install": "node ./scripts/sites-install",
     "sites:update": "npm run sites:pack && npm run sites:install",
     "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
     "sites:launch-monorepo": "cd sites/test-site && npm run start",
-    "start": "npm run start --workspace=@bodiless/test-site",
+    "start": "lerna run start --stream --scope @sites/test-site",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
     "test": "jest",
