--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "author": "Chris Oden <coden@its.jnj.com>",
   "license": "Apache-2.0",
+  "private": true,
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
