--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -22,6 +22,8 @@
     "@bodiless/documentation": "^0.3.7",    
     "@bodiless/fclasses": "^0.3.7",
     "@bodiless/gatsby-theme-bodiless": "^0.3.7",
+    "@bodiless/ui": "^0.3.7",
+    "@bodiless/search": "^0.3.7",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
