Fix missing server and other gatsby start warnings on starter.

--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
+    "@bodiless/backend": "^0.3.7",
     "@bodiless/__cxstarter__": "^0.3.7",
     "@bodiless/components": "^0.3.7",
     "@bodiless/core": "^0.3.7",
