--- a/packages/bodiless-carousel/package.json
+++ b/packages/bodiless-carousel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/carousel",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Provides responsive and aria compliant carousel.",
   "author": "Andrei Beliayeu <abeliaye@its.jnj.com>",
   "homepage": "",
@@ -31,9 +31,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.1",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "pure-react-carousel": "^1.27.6"
   },
