--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/cli",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "A cli tool for Bodiless-JS",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
