--- a/packages/bodiless-documentation/package.json
+++ b/packages/bodiless-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/documentation",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "A tool to aggregate markdown files for rendering by docsify",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
   "homepage": "",
