--- a/packages/bodiless-layouts-ui/package.json
+++ b/packages/bodiless-layouts-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/layouts-ui",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Default UI for BodilessJS Layouts",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -26,9 +26,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/layouts": "^0.3.7",
-    "@bodiless/ui": "^0.3.7",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@bodiless/layouts": "^1.0.0-beta.1",
+    "@bodiless/ui": "^1.0.0-beta.1",
     "re-resizable": "^4.11.0",
     "react-sortable-hoc": "^2.0.0"
   },
