--- a/packages/bodiless-table/package.json
+++ b/packages/bodiless-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/table",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Provide a Bodiless table component and HOC to make it editable",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
   "license": "Apache-2.0",
@@ -27,8 +27,8 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
