--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/ui",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Common default UI elements for BodilessJS",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -33,8 +33,8 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
     "autoprefixer": "^10.0.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
