--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/cx-elements",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Layout components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
@@ -30,9 +30,9 @@
     "lint": "tslint ./src/**/*.ts?x"
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.1",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
     "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
@@ -44,9 +44,9 @@
     "webpack": "^5.69.1"
   },
   "devDependencies": {
+    "@types/uuid": "^3.4.4",
     "tailwindcss": "^2.0.2",
-    "tailwindcss-dir": "^4.0.0",    
-    "@types/uuid": "^3.4.4"
+    "tailwindcss-dir": "^4.0.0"
   },
   "peerDependencies": {
     "@types/react-helmet": "^6.1.0",
