--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/cx-layout",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Layout components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
@@ -28,14 +28,14 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/components-ui": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/cx-elements": "^0.3.7",
-    "@bodiless/cx-editors": "^0.3.7",
-    "@bodiless/cx-image": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/gatsby-theme-bodiless": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.1",
+    "@bodiless/components-ui": "^1.0.0-beta.1",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/cx-editors": "^1.0.0-beta.1",
+    "@bodiless/cx-elements": "^1.0.0-beta.1",
+    "@bodiless/cx-image": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
