--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/gatsby-theme-bodiless",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "A Gatsby theme for BodilessJS",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
@@ -50,18 +50,18 @@
     "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\""
   },
   "dependencies": {
-    "@bodiless/accordion": "^0.3.7",
-    "@bodiless/card": "^0.3.7",
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/components-ui": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/core-ui": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/layouts": "^0.3.7",
-    "@bodiless/navigation": "^0.3.7",
-    "@bodiless/organisms": "^0.3.7",
-    "@bodiless/page": "^0.3.7",
-    "@bodiless/ui": "^0.3.7",
+    "@bodiless/accordion": "^1.0.0-beta.1",
+    "@bodiless/card": "^1.0.0-beta.1",
+    "@bodiless/components": "^1.0.0-beta.1",
+    "@bodiless/components-ui": "^1.0.0-beta.1",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/core-ui": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@bodiless/layouts": "^1.0.0-beta.1",
+    "@bodiless/navigation": "^1.0.0-beta.1",
+    "@bodiless/organisms": "^1.0.0-beta.1",
+    "@bodiless/page": "^1.0.0-beta.1",
+    "@bodiless/ui": "^1.0.0-beta.1",
     "@types/walk": "^2.3.0",
     "autoprefixer": "^10.0.0",
     "axios": "^0.21.0",
