add resolvers pattern and update docs.

--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -12,7 +12,8 @@
     "/lib",
     "/bodiless.docs.json",
     "/site.tailwind.config.js",
-    "/doc"
+    "/doc",
+    "./shadow.js"
   ],
   "repository": {
     "type": "git",
