--- a/packages/cx-flowcontainer/package.json
+++ b/packages/cx-flowcontainer/package.json
@@ -16,9 +16,6 @@
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "run-p build:lib build:api-doc",
     "build:api-doc": "typedoc --out doc/api src",
@@ -32,7 +29,9 @@
   "dependencies": {
     "@bodiless/components": "^0.3.7",
     "@bodiless/components-ui": "^0.3.7",
+    "@bodiless/cx-editors": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
+    "@bodiless/cx-image": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
     "@bodiless/layouts": "^0.3.7",
