--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -34,7 +34,7 @@
     "@bodiless/cx-editors": "^1.0.0-beta.1",
     "@bodiless/cx-elements": "^1.0.0-beta.1",
     "@bodiless/cx-image": "^1.0.0-beta.1",
-    "@bodiless/cx-navigation": "^0.3.7",
+    "@bodiless/cx-navigation": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
