--- a/packages/cx-navigation/package.json
+++ b/packages/cx-navigation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/cx-navigation",
-  "version": "0.3.7",
+  "version": "1.0.0-beta.1",
   "description": "Navigation components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
@@ -28,13 +28,13 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.7",
-    "@bodiless/components-ui": "^0.3.7",
-    "@bodiless/core": "^0.3.7",
-    "@bodiless/cx-elements": "^0.3.7",
-    "@bodiless/cx-editors": "^0.3.7",
-    "@bodiless/fclasses": "^0.3.7",
-    "@bodiless/navigation": "^0.3.7",
+    "@bodiless/components": "^1.0.0-beta.1",
+    "@bodiless/components-ui": "^1.0.0-beta.1",
+    "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/cx-elements": "^1.0.0-beta.1",
+    "@bodiless/cx-editors": "^1.0.0-beta.1",
+    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@bodiless/navigation": "^1.0.0-beta.1",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
