--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -58,6 +58,7 @@
     "build:env-vars": "generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "npm run search-index",
+    "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
     "build:tailwind-configs": "cross-env BODILESS_NPM_ROOT='.' generate-tailwind-configs",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "rimraf ./public/* ./.cache",
@@ -76,6 +77,7 @@
     "copyfiles": "^2.1.1",
     "cross-env": "^5.2.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^2.0.2",
     "tailwindcss-dir": "^4.0.0",
