--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -36,6 +36,7 @@
     "@bodiless/core": "^1.0.0-beta.1",
     "@bodiless/cx-editors": "^1.0.0-beta.1",
     "@bodiless/cx-elements": "^1.0.0-beta.1",
+    "@bodiless/cx-flowcontainer": "^1.0.0-beta.1",
     "@bodiless/cx-layout": "^1.0.0-beta.1",
     "@bodiless/cx-link": "^1.0.0-beta.1",
     "@bodiless/cx-templates": "^1.0.0-beta.1",
