--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "build": "tsc --version && tsc -p ./tsconfig.json ",
     "build:watch": "npm run build -- --watch",
+    "new": "./bin/bodiless new",
     "postpack": "rimraf oclif.manifest.json",
     "prepack": "rimraf lib && npm run build && oclif-dev manifest && oclif-dev readme",
     "test": "echo \"Error: run tests from root\" && exit 1"
@@ -37,16 +38,25 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
-    "@types/fs-extra": "^8.0.0",
-    "@types/lodash": "^4.14.158",
-    "@types/lodash.flow": "^3.5.6",
+    "find-git-root": "1.0.4",
     "fs-extra": "^8.1.0",
     "globby": "^10",
-    "lodash": "^4.17.19"
+    "inquirer": "^8.2.1",
+    "lodash": "^4.17.19",
+    "ora": "^4.0.2",
+    "replace-in-file": "^6.2.0",
+    "semver": "^7.3.5",
+    "tar": "^6.1.11",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
-    "@types/node": "^16"
+    "@types/fs-extra": "^8.0.0",
+    "@types/inquirer": "^6.5.0",
+    "@types/lodash": "^4.14.158",
+    "@types/lodash.flow": "^3.5.6",
+    "@types/node": "^16",
+    "@types/tar": "^6.1.1"
   },
   "oclif": {
     "commands": "./lib/commands",
