--- a/packages/cx-flowcontainer/package.json
+++ b/packages/cx-flowcontainer/package.json
@@ -16,9 +16,6 @@
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "run-p build:lib build:api-doc",
     "build:api-doc": "typedoc --out doc/api src",
@@ -33,7 +30,9 @@
     "@bodiless/components": "^1.0.0-beta.1",
     "@bodiless/components-ui": "^1.0.0-beta.1",
     "@bodiless/core": "^1.0.0-beta.1",
+    "@bodiless/cx-editors": "^1.0.0-beta.1",
     "@bodiless/cx-elements": "^1.0.0-beta.1",
+    "@bodiless/cx-image": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/layouts": "^1.0.0-beta.1",
     "@bodiless/layouts-ui": "^1.0.0-beta.1",
