Cleanup and renaming

--- a/packages/cx-flowcontainer/package.json
+++ b/packages/cx-flowcontainer/package.json
@@ -34,6 +34,7 @@
     "@bodiless/cx-elements": "^1.0.0-beta.1",
     "@bodiless/cx-image": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@bodiless/hydration": "^1.0.0-beta.1",
     "@bodiless/layouts": "^1.0.0-beta.1",
     "@bodiless/layouts-ui": "^1.0.0-beta.1",
     "@bodiless/richtext": "^1.0.0-beta.1",
