Renaming starter package

--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@bodiless/__cxstarter__": "^1.0.0-beta.1",
+    "--cxstarter--": "^1.0.0-beta.1",
     "@bodiless/backend": "^1.0.0-beta.1",
     "@bodiless/components": "^1.0.0-beta.1",
     "@bodiless/core": "^1.0.0-beta.1",
