--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -42,8 +42,8 @@
       "@bodiless/core-ui/*": ["bodiless-core-ui/src/*"],
       "@bodiless/curator/": ["bodiless-curator/src/"],
       "@bodiless/curator/*": ["bodiless-curator/src/*"],
-      "@bodiless/__cxstarter__": ["__cxstarter__/src/"],
-      "@bodiless/__cxstarter__/*": ["__cxstarter__/src/*"],      
+      "--cxstarter--": ["__cxstarter__/src/"],
+      "--cxstarter--/*": ["__cxstarter__/src/*"],      
       "@bodiless/cx-editors": ["cx-editors/src/"],
       "@bodiless/cx-editors/*": ["cx-editors/src/*"],
       "@bodiless/cx-elements": ["cx-elements/src/"],
