--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/__cxstarter__",
+  "name": "--cxstarter--",
   "sideEffects": false,
   "version": "1.0.0-beta.1",
   "description": "",
