--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -38,6 +38,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "@root/walk": "1.1.0",
     "find-git-root": "1.0.4",
     "fs-extra": "^8.1.0",
     "globby": "^10",
