bugfix(bc-footer): Fix Footer Menu Issues Issues (#16)
* bugfix(bc-footer): Fix Footer Menu Accessibility Issues

* bugfix(bc-footer): Add External And Download Icons To Menu Title Links

Co-authored-by: Guilherme Zeni <gzeni@its.jnj.com>

--- a/packages/cx-navigation/package.json
+++ b/packages/cx-navigation/package.json
@@ -33,6 +33,7 @@
     "@bodiless/core": "^1.0.0-beta.1",
     "@bodiless/cx-elements": "^1.0.0-beta.1",
     "@bodiless/cx-editors": "^1.0.0-beta.1",
+    "@bodiless/cx-link": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/navigation": "^1.0.0-beta.1",
     "lodash": "^4.17.19"
