--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -27,6 +27,7 @@
     "access": "public"
   },
   "scripts": {
+    "bl": "./bin/bodiless",
     "build": "tsc --version && tsc -p ./tsconfig.json ",
     "build:watch": "npm run build -- --watch",
     "new": "./bin/bodiless new",
