--- a/packages/cx-templates/package.json
+++ b/packages/cx-templates/package.json
@@ -36,6 +36,7 @@
     "@bodiless/core": "^1.0.0-beta.1",
     "@bodiless/cx-editors": "^1.0.0-beta.1",
     "@bodiless/cx-elements": "^1.0.0-beta.1",
+    "@bodiless/cx-image": "^1.0.0-beta.1",
     "@bodiless/cx-layout": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
