feature(cx-structuredata): Provide Structure Data Package

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -58,6 +58,8 @@
       "@bodiless/cx-link/*": ["cx-link/src/*"],
       "@bodiless/cx-navigation": ["cx-navigation/src/"],
       "@bodiless/cx-navigation/*": ["cx-navigation/src/*"],
+      "@bodiless/cx-structuredata": ["cx-structuredata/src"],
+      "@bodiless/cx-structuredata/*": ["cx-structuredata/src/*"],
       "@bodiless/cx-templates": ["cx-templates/src/"],
       "@bodiless/cx-templates/*": ["cx-templates/src/*"],      
       "@bodiless/filtering": ["bodiless-filtering/src"],
