--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -50,6 +50,8 @@
       "@bodiless/cx-elements/*": ["cx-elements/src/*"],
       "@bodiless/cx-flowcontainer": ["cx-flowcontainer/src/"],
       "@bodiless/cx-flowcontainer/*": ["cx-flowcontainer/src/*"],
+      "@bodiless/cx-hero": ["cx-hero/src/"],
+      "@bodiless/cx-hero/*": ["cx-hero/src/*"],
       "@bodiless/cx-image": ["cx-image/src/"],
       "@bodiless/cx-image/*": ["cx-image/src/*"],
       "@bodiless/cx-layout": ["cx-layout/src/"],
