--- a/packages/cx-image/package.json
+++ b/packages/cx-image/package.json
@@ -35,7 +35,7 @@
     "@bodiless/components-ui": "^1.0.0-beta.2",
     "@bodiless/core": "^1.0.0-beta.2",
     "@bodiless/cx-elements": "^1.0.0-beta.2",
-    "@bodiless/cx-hero": "^1.0.0-beta.2",
+    "@bodiless/vital-hero": "^1.0.0-beta.2",
     "@bodiless/fclasses": "^1.0.0-beta.2",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.2",
     "@bodiless/hydration": "^1.0.0-beta.2",
