--- a/packages/vital-hero/package.json
+++ b/packages/vital-hero/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/cx-hero",
+  "name": "@bodiless/vital-hero",
   "sideEffects": false,
   "version": "1.0.0-beta.1",
   "description": "Clean, designable Hero component for CanvasX based projects",
