--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -58,6 +58,7 @@
     "@types/lodash": "^4.14.158",
     "@types/lodash.flow": "^3.5.6",
     "@types/node": "^16",
+    "@types/semver": "5.5.0",
     "@types/tar": "^6.1.1"
   },
   "oclif": {
