--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sites/--cxstarter--",
+  "name": "@sites/--minimal--",
   "version": "1.0.0-beta.1",
-  "description": "Starter site for a Bodiless site using the Vital DS",
+  "description": "Starter template for a basic Bodiless site",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
   "license": "Apache-2.0",
@@ -11,40 +11,25 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "--cxstarter--": "^1.0.0-beta.1",
     "@babel/core": "^7.9.0",
     "@bodiless/backend": "^1.0.0-beta.1",
     "@bodiless/components": "^1.0.0-beta.1",
     "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/cx-editors": "^1.0.0-beta.1",
-    "@bodiless/cx-elements": "^1.0.0-beta.1",
-    "@bodiless/cx-link": "^1.0.0-beta.1",
-    "@bodiless/cx-templates": "^1.0.0-beta.1",
     "@bodiless/documentation": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
-    "@bodiless/search": "^1.0.0-beta.1",
     "@bodiless/ui": "^1.0.0-beta.1",
-    "@bodiless/webpack": "^1.0.0-beta.1",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gatsby": "~3.13.0",
-    "gatsby-plugin-canonical-urls": "^3.6.0",
-    "gatsby-plugin-sitemap": "^4.2.0",
-    "glob": "^7.1.6",
-    "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "mobx-react": "^7.2.1",
-    "ora": "^4.0.2",
     "postcss": "^8.2.4",
-    "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-markdown": "^8.0.0",
-    "react-mde": "^11.0.0"
+    "react-helmet": "^6.1.0"
   },
   "files": [
     "lib"
@@ -75,8 +60,6 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "copyfiles": "^2.1.1",
     "cross-env": "^5.2.0",
-    "gatsby-plugin-compile-es6-packages": "^1.1.0",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^2.0.2",
     "tailwindcss-dir": "^4.0.0",
