--- a/sites/__basic__/package.json
+++ b/sites/__basic__/package.json
@@ -15,16 +15,10 @@
     "@bodiless/backend": "^1.0.0-beta.1",
     "@bodiless/components": "^1.0.0-beta.1",
     "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/cx-editors": "^1.0.0-beta.1",
-    "@bodiless/cx-elements": "^1.0.0-beta.1",
-    "@bodiless/cx-link": "^1.0.0-beta.1",
-    "@bodiless/cx-templates": "^1.0.0-beta.1",
     "@bodiless/documentation": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
-    "@bodiless/search": "^1.0.0-beta.1",
     "@bodiless/ui": "^1.0.0-beta.1",
-    "@bodiless/webpack": "^1.0.0-beta.1",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
@@ -38,12 +32,9 @@
     "mobx-react": "^7.2.1",
     "ora": "^4.0.2",
     "postcss": "^8.2.4",
-    "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-markdown": "^8.0.0",
-    "react-mde": "^11.0.0"
+    "react-helmet": "^6.1.0"
   },
   "files": [
     "lib"
