--- a/sites/__basic__/package.json
+++ b/sites/__basic__/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sites/--basic--",
   "version": "1.0.0-beta.1",
-  "description": "Starter site for a Bodiless site using the Vital DS",
+  "description": "Starter site for a basic Bodiless site",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
   "license": "Apache-2.0",
@@ -11,7 +11,6 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "@babel/core": "^7.9.0",
     "@bodiless/backend": "^1.0.0-beta.1",
     "@bodiless/components": "^1.0.0-beta.1",
     "@bodiless/core": "^1.0.0-beta.1",
@@ -24,13 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gatsby": "~3.13.0",
-    "gatsby-plugin-canonical-urls": "^3.6.0",
-    "gatsby-plugin-sitemap": "^4.2.0",
     "glob": "^7.1.6",
-    "informed": "^3.34.0",
-    "lodash": "^4.17.19",
-    "mobx-react": "^7.2.1",
-    "ora": "^4.0.2",
     "postcss": "^8.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -65,7 +58,6 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "copyfiles": "^2.1.1",
     "cross-env": "^5.2.0",
-    "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^2.0.2",
