--- a/sites/__basic__/package.json
+++ b/sites/__basic__/package.json
@@ -23,11 +23,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gatsby": "~3.13.0",
-    "glob": "^7.1.6",
     "postcss": "^8.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.2",
+    "tailwindcss-dir": "^4.0.0"
   },
   "files": [
     "lib"
@@ -57,8 +58,6 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^2.0.2",
-    "tailwindcss-dir": "^4.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.0.0"
   }
