--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -65,6 +65,6 @@ jobs:
         run: npm run test --quiet --colors
 
       # Temp using monorepo since standalone is breaking cypress tests.
-      - name: Cypress tests
-        run: npm run test:monorepo
+      # - name: Cypress tests
+        # run: npm run test:monorepo
         # run: npm run test:ci
