--- a/packages/cx-templates/package.json
+++ b/packages/cx-templates/package.json
@@ -10,6 +10,7 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/site.tailwind.config.js",    
     "/doc"
   ],
   "repository": {
@@ -36,6 +37,8 @@
     "@bodiless/core": "^1.0.0-beta.1",
     "@bodiless/cx-editors": "^1.0.0-beta.1",
     "@bodiless/cx-elements": "^1.0.0-beta.1",
+    "@bodiless/cx-flowcontainer": "^1.0.0-beta.1",
+    "@bodiless/cx-image": "^1.0.0-beta.1",
     "@bodiless/cx-layout": "^1.0.0-beta.1",
     "@bodiless/fclasses": "^1.0.0-beta.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
