--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -30,11 +30,13 @@
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "find-up": "^4.1.0",
     "gatsby": "~3.13.0",
     "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
+    "isomorphic-git": "1.17.0",
     "lodash": "^4.17.19",
     "mobx-react": "^7.2.1",
     "ora": "^4.0.2",
