--- a/sites/test-site/.env.site
+++ b/sites/test-site/.env.site
@@ -1,9 +1,11 @@
 # Git commits are disabled by default.
 # To enable it - uncomment the following line.
+# Or you can enable on a per-branch basis, see bodiless.env.config.js 
 # BODILESS_BACKEND_COMMIT_ENABLED='1'
 
 # The Backend Data Save is enabled by default.
 # To disable it - uncomment the following line.
+# Or you can disable on a per-branch basis, see bodiless.env.config.js 
 # BODILESS_BACKEND_SAVE_ENABLED='0'
 
 # Git commit paths used by the backend, in our case @bodiless/backend/server.js.
