--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -36,7 +36,7 @@
     "gatsby-plugin-sitemap": "^4.2.0",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
-    "isomorphic-git": "1.17.0",
+    "isomorphic-git": "^1.10.1",
     "lodash": "^4.17.19",
     "mobx-react": "^7.2.1",
     "ora": "^4.0.2",
