fixing WEBPACK related issue (Can`t resolve `gatsby-link` in ... .cache)

--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -31,8 +31,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gatsby": "^4.11.2",
+    "gatsby-link": "^4.11.1",
     "gatsby-plugin-canonical-urls": "^4.10.0",
     "gatsby-plugin-sitemap": "^5.10.2",
+    "gatsby-react-router-scroll": "^5.11.0",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
