--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@bodiless/backend": "^1.0.0-beta.2",
     "@bodiless/components": "^1.0.0-beta.2",
+    "@bodiless/components-ui": "^1.0.0-beta.2",
     "@bodiless/core": "^1.0.0-beta.2",
     "@bodiless/documentation": "^1.0.0-beta.2",
     "@bodiless/fclasses": "^1.0.0-beta.2",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.2",
+    "@bodiless/layouts-ui": "^1.0.0-beta.2",
+    "@bodiless/richtext-ui": "^1.0.0-beta.2",
     "@bodiless/ui": "^1.0.0-beta.2",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
