--- a/sites/__minimal__/tsconfig.json
+++ b/sites/__minimal__/tsconfig.json
@@ -1,30 +1,18 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": "../..",
     "outDir": "lib",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "skipDefaultLibCheck": true,
-    "noUnusedLocals": true,
-    "lib": ["es7", "dom"],
-    "types": ["node", "jest"],
-    "checkJs": false,
-    "jsx": "react",
-    "strict": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "allowJs": false,
-    "strictNullChecks": true,
-    "noEmit": false,
-    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "preserveSymlinks": false,
   },
   "include": [
-    "./src/**/*"
+    "src"
+  ],
+  "exclude": [
+    "lib",
+    "node_modules",
+    "__tests__/**/*.*",
+    "src/**/__tests__/**/*.*"
   ]
 }
