restore latest version for gatsby plugins and skip related tests

--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -83,9 +83,9 @@
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "4.10.2",
+    "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-plugin-typescript": "^4.10.1",
-    "gatsby-source-filesystem": "4.7.0",
+    "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.10.0",
     "git-branch": "^2.0.1",
     "glob": "^7.1.6",
