--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -58,7 +58,7 @@
     "build:doc": "bl-docs-build",
     "build:env-vars": "generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
-    "build:search": "create-search-incex",
+    "build:search": "create-search-index",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
     "build:tailwind-configs": "cross-env BODILESS_NPM_ROOT='.' generate-tailwind-configs",
     "check": "tsc -p ./tsconfig.check.json",
