--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "gatsby": "~3.13.0",
     "postcss": "^8.2.4",
