--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -8,7 +8,7 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
-    "site.tailwind.config.js",
+    "tailwind.config.js",
     "/doc",
     "/bodiless.docs.json"
   ],
