WIP on vital meta

--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -34,6 +34,7 @@
     "@bodiless/cx-editors": "^1.0.0-beta.2",
     "@bodiless/cx-elements": "^1.0.0-beta.2",
     "@bodiless/cx-image": "^1.0.0-beta.2",
+    "@bodiless/vital-meta": "^1.0.0-beta.2",
     "@bodiless/cx-navigation": "^1.0.0-beta.2",
     "@bodiless/fclasses": "^1.0.0-beta.2",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.2",
