Add 'getDocs.js' to files section of package.json

--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -11,6 +11,7 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/getDocs.js",
     "/tailwind.config.js",
     "/doc",
     "./shadow.js"
