--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -13,6 +13,7 @@
     "/lib",
     "/doc",
     "/bodiless.docs.json",
+    "/getDocs.js",
     "/bodiless.tailwind.config.js",
     "/index.tailwind.css"
   ],
