feature(vital-structuredata): Rename CX Structure Data To Vital

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -58,8 +58,6 @@
       "@bodiless/cx-link/*": ["cx-link/src/*"],
       "@bodiless/cx-navigation": ["cx-navigation/src/"],
       "@bodiless/cx-navigation/*": ["cx-navigation/src/*"],
-      "@bodiless/cx-structuredata": ["cx-structuredata/src"],
-      "@bodiless/cx-structuredata/*": ["cx-structuredata/src/*"],
       "@bodiless/cx-templates": ["cx-templates/src/"],
       "@bodiless/cx-templates/*": ["cx-templates/src/*"],      
       "@bodiless/filtering": ["bodiless-filtering/src"],
@@ -88,6 +86,8 @@
       "@bodiless/tokens/*": ["bodiless-tokens/src/*"],
       "@bodiless/ui": ["bodiless-ui/src"],
       "@bodiless/ui/*": ["bodiless-ui/src/*"],
+      "@bodiless/vital-structuredata": ["vital-structuredata/src"],
+      "@bodiless/vital-structuredata/*": ["vital-structuredata/src/*"],
       "@bodiless/table": ["bodiless-table/src"],
       "@bodiless/table/*": ["bodiless-table/src/*"],
       "@bodiless/youtube": ["bodiless-youtube/src"],
