fix: Correct exports of package tailwind configs and starter activation. (#1538)
* fix: Correct exports of package tailwind configs and starter activation.

* Ensure tailwind.config.js is exported.

* Add 'getDocs.js' to files section of package.json

* fix: update cx-layout tailwind-config

Co-authored-by: Konstantin Mishur <kmishur@its.jnj.com>
Co-authored-by: hvanyo <58534559+hvanyo@users.noreply.github.com>

--- a/packages/bodiless-card/package.json
+++ b/packages/bodiless-card/package.json
@@ -10,8 +10,9 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/getDocs.js",
     "/doc",
-    "site.tailwind.config.js"
+    "tailwind.config.js"
   ],
   "repository": {
     "type": "git",
