--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -16,7 +16,8 @@
     "/lib",
     "/doc",
     "/bodiless.docs.json",
-    "site.tailwind.config.js"
+    "/getDocs.js",
+    "tailwind.config.js"
   ],
   "repository": {
     "type": "git",
