--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -11,7 +11,8 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
-    "/site.tailwind.config.js",
+    "/getDocs.js",
+    "/tailwind.config.js",
     "/doc",
     "./shadow.js"
   ],
