--- a/packages/cx-templates/package.json
+++ b/packages/cx-templates/package.json
@@ -10,7 +10,8 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
-    "/site.tailwind.config.js",
+    "/getDocs.js",
+    "/tailwind.config.js",
     "/doc"
   ],
   "repository": {
