feat(cx-navigation): Add Cx Navigation #12 (#1495)
* feature(bc-footer): Add Brand.com Footer

* feature(bc-footer): Final Styles Adjustments

* feature(bc-footer): Copyright as RTE, Add TODO On Social Links AND Removed Unnecessary FlowHoc

* feature(bc-footer): Move Sepator Styles To Its Own Token

* feature(bc-footer): Rename GlobalFooter To Footer

* feature(bc-footer): Address PR Feedback - Batch 1

* Reorganize menu. (#7)

* Reorganize menu.

* Remove redundant footer menu styling.

* Add submenu titles.

* Remove duplication in MenuTitleClean

* Fix lint

* Add canvasx token docs.

* feature(bc-footer): Fix doc typo

Co-authored-by: hvanyo <58534559+hvanyo@users.noreply.github.com>

* feature(bc-footer): Fix doc typo

Co-authored-by: hvanyo <58534559+hvanyo@users.noreply.github.com>

Co-authored-by: Guilherme Almeida Zeni <gzeni@ciandt.com>
Co-authored-by: hvanyo <58534559+hvanyo@users.noreply.github.com>

* feature(bc-footer): Update Footer Menu Data

* feature(bc-footer): Update Package.Lock

* feature(bc-footer): Remove Console Log From Menu Separator

* feature(bc-footer): Improve Footer Structure For Later Static Implementation

* feature(bc-footer): Add Todo Comments

* feature(bc-footer): Rename SiteHeader And SiteFooter To Header And Footer

* feature(bc-footer): Add Cx Navigation To TSConfig

* feature(bc-footer): Rename Remaining SiteHeader And SiteFooter To Header And Footer

* feature(bc-footer): Adjust Layout After Updates

* Token site constrains (#8)

* feature(bc-footer): Add Footer Slots Wrappers

* feature(bc-footer): Refactor Footer Copyright RichText

* feature(bc-footer): Update Footer And Copyright Keys

* feature(bc-footer): Add Footer Page Example

* feature(bc-footer): Feedback Fixes - Batch 2

* feature(bc-footer): Update Cx Navigation Package Version

* fix(bc-footer): Fix Footer Issues (#10)

* bugfix(bc-footer): Fix Footer Issues

* Remove top margin from in f

--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -36,6 +36,7 @@
     "@bodiless/cx-editors": "^1.0.0-beta.3",
     "@bodiless/cx-elements": "^1.0.0-beta.3",
     "@bodiless/cx-image": "^1.0.0-beta.3",
+    "@bodiless/cx-link": "^1.0.0-beta.3",
     "@bodiless/cx-navigation": "^1.0.0-beta.3",
     "@bodiless/fclasses": "^1.0.0-beta.3",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.3",
