Ensure starter/minimal start on 8000/8001 and test site on 8005/8006

--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -65,7 +65,7 @@
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
-    "dev-frontend": "gatsby develop -p 8000",
+    "dev-frontend": "gatsby develop",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:doc",
     "serve": "gatsby serve",
