--- a/sites/test-site/.env.site
+++ b/sites/test-site/.env.site
@@ -11,7 +11,7 @@
 # BODILESS_BACKEND_DATA_FILE_PATH='src/data'
 # BODILESS_BACKEND_STATIC_PATH='static'
 # BODILESS_BACKEND_PUBLIC_PAGE_PATH = 'public/page-data'
-# BODILESS_BACKEND_PORT="8006"
+BODILESS_BACKEND_PORT="8006"
 
 # Site's absolute production URL for use in generating Canonical & Sitemap.xml.
 SITE_URL='https://www.example.com/'
