--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -51,7 +51,7 @@
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
-    "dev-frontend": "gatsby develop -p 8000",
+    "dev-frontend": "gatsby develop",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:doc",
     "serve": "gatsby serve",
