--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -17,7 +17,8 @@
   "files": [
     "/bin",
     "/lib",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "getDocs.js"
   ],
   "repository": {
     "type": "git",
