--- a/packages/bodiless-core/package.json
+++ b/packages/bodiless-core/package.json
@@ -10,7 +10,8 @@
   "files": [
     "/lib",
     "/doc",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
