--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -10,7 +10,8 @@
     "/lib",
     "tailwind.config.js",
     "/doc",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
