--- a/packages/bodiless-documentation/package.json
+++ b/packages/bodiless-documentation/package.json
@@ -19,7 +19,8 @@
     "/lib",
     "/doc",
     "/resources",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
