--- a/packages/bodiless-gtm/package.json
+++ b/packages/bodiless-gtm/package.json
@@ -9,7 +9,8 @@
   "files": [
     "/lib",
     "/doc",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
