--- a/packages/bodiless-page/package.json
+++ b/packages/bodiless-page/package.json
@@ -14,7 +14,8 @@
   "files": [
     "/doc",
     "/lib",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
