--- a/packages/bodiless-richtext/package.json
+++ b/packages/bodiless-richtext/package.json
@@ -12,7 +12,8 @@
     "/bin",
     "/patches",
     "/doc",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
