--- a/packages/bodiless-webpack/package.json
+++ b/packages/bodiless-webpack/package.json
@@ -12,7 +12,8 @@
   },
   "files": [
     "/lib",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
