--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -12,7 +12,8 @@
   "files": [
     "bin/",
     "src/",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
