--- a/packages/bodiless-tokens/package.json
+++ b/packages/bodiless-tokens/package.json
@@ -15,7 +15,8 @@
   "files": [
     "/lib",
     "/doc",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "publishConfig": {
     "access": "public"
