--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -46,6 +46,7 @@
     "@bodiless/fclasses": "^1.0.0-beta.5",
     "@bodiless/richtext": "^1.0.0-beta.5",
     "@bodiless/richtext-ui": "^1.0.0-beta.5",
+    "@bodiless/vital-hero": "^1.0.0-beta.5",
     "lodash": "^4.17.19",
     "tailwindcss": "^2.0.2"
   }
