--- a/packages/vital-hero/package.json
+++ b/packages/vital-hero/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bodiless/vital-hero",
   "sideEffects": false,
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.5",
   "description": "Clean, designable Hero component for CanvasX based projects",
   "author": "Lucas Varela <lvarelab@its.jnj.com>",
   "license": "UNLICENSED",
@@ -31,8 +31,11 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/cx-elements": "^1.0.0-beta.3",
-    "@bodiless/fclasses": "^1.0.0-beta.3",
-    "@bodiless/hydration": "^1.0.0-beta.3"
+    "@bodiless/components": "^1.0.0-beta.5",
+    "@bodiless/components-ui": "^1.0.0-beta.5",
+    "@bodiless/cx-elements": "^1.0.0-beta.5",
+    "@bodiless/fclasses": "^1.0.0-beta.5",
+    "@bodiless/hydration": "^1.0.0-beta.5",
+    "@bodiless/vital-youtube": "^1.0.0-beta.5"
   }
 }
