--- a/packages/vital-youtube/package.json
+++ b/packages/vital-youtube/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "@bodiless/components": "^1.0.0-beta.5",
     "@bodiless/core": "^1.0.0-beta.5",
-    "@bodiless/cx-editors": "^1.0.0-beta.5",
-    "@bodiless/cx-elements": "^1.0.0-beta.5",
+    "@bodiless/vital-editors": "^1.0.0-beta.5",
+    "@bodiless/vital-elements": "^1.0.0-beta.5",
     "@bodiless/fclasses": "^1.0.0-beta.5",
     "@bodiless/organisms": "^1.0.0-beta.5",
     "@bodiless/vital-structuredata": "^1.0.0-beta.5",
