--- a/packages/vital-list/package.json
+++ b/packages/vital-list/package.json
@@ -32,10 +32,10 @@
     "@bodiless/components": "^1.0.0-beta.5",
     "@bodiless/components-ui": "^1.0.0-beta.5",
     "@bodiless/core": "^1.0.0-beta.5",
-    "@bodiless/cx-editors": "^1.0.0-beta.5",
-    "@bodiless/cx-elements": "^1.0.0-beta.5",
-    "@bodiless/cx-image": "^1.0.0-beta.5",
-    "@bodiless/cx-link": "^1.0.0-beta.5",
+    "@bodiless/vital-editors": "^1.0.0-beta.5",
+    "@bodiless/vital-elements": "^1.0.0-beta.5",
+    "@bodiless/vital-image": "^1.0.0-beta.5",
+    "@bodiless/vital-link": "^1.0.0-beta.5",
     "@bodiless/fclasses": "^1.0.0-beta.5",
     "@bodiless/hydration": "^1.0.0-beta.5",
     "lodash": "^4.17.19"
