--- a/packages/bodiless-hydration/package.json
+++ b/packages/bodiless-hydration/package.json
@@ -18,10 +18,10 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib build:api-doc",
-    "build:api-doc": "typedoc --out doc/api src",
+    "build": "run-p build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
