--- a/packages/bodiless-psh/package.json
+++ b/packages/bodiless-psh/package.json
@@ -9,8 +9,9 @@
     "bodiless-psh-init": "./lib/bodiless-psh-init.js"
   },
   "scripts": {
-    "build": "tsc --version && tsc -p ./tsconfig.json ",
-    "build:watch": "npm run build -- --watch",
+    "build": "run-p build:lib",
+    "build:lib": "tsc -p ./tsconfig.json",
+    "build:watch": "npm run build:lib -- --watch",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo"
   },
   "directories": {
