--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -25,12 +25,12 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc -p ./tsconfig.json && npm run build:css && npm run copy && npm run build:api-doc",
+    "build": "npm run build:lib && npm run build:css && npm run copy",
+    "build:lib": "tsc -p ./tsconfig.json",
+    "build:watch": "npm run build:lib -- --watch",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
     "build:css": "postcss index.tailwind.css -o ./src/bodiless.index.css",
-    "build:watch": "npm run build -- --watch",
-    "build:api-doc": "typedoc --out doc/api src",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
-    "lint": "tslint ./src/**/*.ts?x",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
