--- a/packages/vital-editors/package.json
+++ b/packages/vital-editors/package.json
@@ -22,8 +22,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib build:api-doc",
-    "build:api-doc": "typedoc --out doc/api src",
+    "build": "run-p build:lib",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
