--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -22,8 +22,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib copy build:api-doc",
-    "build:api-doc": "typedoc --out doc/api src",
+    "build": "run-p build:lib copy",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
