Remove vital-hero package

--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -42,9 +42,9 @@
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.7",
-    "@bodiless/vital-hero": "^1.0.0-beta.7",
     "@bodiless/vital-image": "^1.0.0-beta.7",
     "@bodiless/vital-layout": "^1.0.0-beta.7",
+    "@bodiless/vital-youtube": "^1.0.0-beta.7",
     "lodash": "^4.17.19"
   }
 }
