--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -42,11 +42,11 @@
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.7",
-    "@bodiless/vital-hero": "^1.0.0-beta.7",
     "@bodiless/vital-image": "^1.0.0-beta.7",
     "@bodiless/vital-layout": "^1.0.0-beta.7",
     "@bodiless/vital-link": "^1.0.0-beta.7",
     "@bodiless/vital-templates": "^1.0.0-beta.7",
+    "@bodiless/vital-youtube": "^1.0.0-beta.7",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
