--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -39,6 +39,7 @@
     "@bodiless/fclasses": "^1.0.0-beta.7",
     "@bodiless/richtext": "^1.0.0-beta.7",
     "@bodiless/richtext-ui": "^1.0.0-beta.7",
+    "@bodiless/vital-content-listing": "^1.0.0-beta.7",
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.7",
